# cliese

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pytest.ini  requirements  requirements.txt
.github/workflows/: python-package.yml
src/testproj/: __init__.py  annotation.py  pipeline.py  registration.py  setup.py  typer.py  typer_ext.py  types.py
src/testproj/legacy/: typer.py
src/testproj/legacy/signature/: visitor.py
src/testproj/parser/: __init__.py  logger.py
src/testproj/poc/: __init__.py  config.py  pipeline.py  setup.py  testing.py  typer_ext.py  types.py
src/testproj/signature/: builder.py  nodes.py  signature_visitor.py  visitor.py
src/typerplus/: __init__.py  annotation.py  config.py  core.py  pipeline.py  setup.py  signature.py  testing.py  typer_ext.py  types.py
src/typerplus/demo/: __init__.py  __main__.py  main.py  typer_compat.py
src/typerplus/legacy/: registration.py
src/typerplus/legacy/signature/: builder.py  nodes.py  transform.py
src/typerplus/parser/: __init__.py  logger.py
tests/: conftest.py  test_annotation_utils.py  test_command_result.py  test_config.py  test_hook_registration.py  test_param_annotation_description.py  test_param_modification.py  test_parser_injection.py  test_parser_logger.py  test_pipeline.py  test_setup.py  test_sig_builder.py  test_sig_iterator.py  test_signature_utils.py  test_typer_ext.py  test_types.py  test_verbosity_parser.py  test_visitor1.py
tests/legacy/: conftest.py  test_command_result.py  test_hook_registration.py  test_param_annotation_description.py  test_param_modification.py  test_sig_builder.py  test_sig_iterator.py  test_verbosity_parser.py  test_visitor1.py
tests/poc/: test_annotation_utils.py  test_config.py  test_pipeline.py  test_setup.py  test_typer_ext.py  test_types.py
