[project]
name = "typerplus"
version = "0.1.0a2"
description = "TyperPlus turns Typer into a pipeline-powered CLI"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "rich>=14.1.0",
    "type-extensions>=0.1.2",
    "typer>=0.19.2",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.scripts]
typerplus = "typerplus.demo.main:app"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "badgie>=0.14.2",
    "isort>=7.0.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.0",
]
